@@ -1,7 +1,7 @@
 /** 
  * @file  AppSerialize.cpp
  *
- * @brief Code to serialize settings to/from registry
+ * @brief Code to serialize settings to/from registry.
  */
 // RCS ID line follows -- this is updated by CVS
 // $Id$
@@ -15,23 +15,38 @@
 static char THIS_FILE[] = __FILE__;
 #endif
 
-
+/**
+ * @brief Constructor.
+ *
+ * @param [in] direction Are we reading or writing data.
+ * @param [in] section Section (key) name in registry, under application.
+ */
 AppSerialize::AppSerialize(Direction direction, LPCTSTR section)
 : m_direction(direction)
 , m_section(section)
 {
 }
 
-/*** Write or read one integer value, in current section */
-void
-AppSerialize::SerializeInt(LPCTSTR name, int & value, int defval)
+/**
+ * @brief Read or write integer value, in current section.
+ * @param [in] name Name of value.
+ * @param [in,out] value Value to read/write.
+ * @param [in] defval Default value.
+ */
+void AppSerialize::SerializeInt(LPCTSTR name, int & value, int defval)
 {
 	SerializeInt(m_section, name, value, defval);
 }
 
-/*** Write or read one integer value, in specified section */
-void
-AppSerialize::SerializeInt(LPCTSTR section, LPCTSTR name, int & value, int defval)
+/**
+ * @brief Write or read one integer value, in specified section.
+ * @param [in] section Section for value.
+ * @param [in] name Name of value.
+ * @param [in,out] value Value to read/write.
+ * @param [in] defval Default value.
+ */
+void AppSerialize::SerializeInt(LPCTSTR section, LPCTSTR name, int & value,
+	int defval)
 {
 	if (m_direction == Save)
 		AfxGetApp()->WriteProfileInt(section, name, value);
@@ -39,16 +54,26 @@ AppSerialize::SerializeInt(LPCTSTR section, LPCTSTR name, int & value, int defva
 		value = AfxGetApp()->GetProfileInt(section, name, 0);
 }
 
-/*** Write or read one integer value, in current section */
-void
-AppSerialize::SerializeLong(LPCTSTR name, LONG & value, LONG defval)
+/**
+ * @brief Write or read one integer value, in current section.
+ * @param [in] name Name of value.
+ * @param [in,out] value Value to read/write.
+ * @param [in] defval Default value.
+ */
+void AppSerialize::SerializeLong(LPCTSTR name, LONG & value, LONG defval)
 {
 	SerializeLong(m_section, name, value, defval);
 }
 
-/*** Write or read one integer value, in specified section */
-void
-AppSerialize::SerializeLong(LPCTSTR section, LPCTSTR name, LONG & value, LONG defval)
+/**
+ * @brief Write or read one integer value, in specified section.
+ * @param [in] section Section for value.
+ * @param [in] name Name of value.
+ * @param [in,out] value Value to read/write.
+ * @param [in] defval Default value.
+ */
+void AppSerialize::SerializeLong(LPCTSTR section, LPCTSTR name, LONG & value,
+	LONG defval)
 {
 	if (m_direction == Save)
 		AfxGetApp()->WriteProfileInt(section, name, value);
@@ -56,16 +81,26 @@ AppSerialize::SerializeLong(LPCTSTR section, LPCTSTR name, LONG & value, LONG de
 		value = AfxGetApp()->GetProfileInt(section, name, 0);
 }
 
-/*** Write or read one integer value, in current section */
-void
-AppSerialize::SerializeByte(LPCTSTR name, BYTE & value, BYTE defval)
+/**
+ * @brief Write or read one integer value, in current section.
+ * @param [in] name Name of value.
+ * @param [in,out] value Value to read/write.
+ * @param [in] defval Default value.
+ */
+void AppSerialize::SerializeByte(LPCTSTR name, BYTE & value, BYTE defval)
 {
 	SerializeByte(m_section, name, value, defval);
 }
 
-/*** Write or read one integer value, in specified section */
-void
-AppSerialize::SerializeByte(LPCTSTR section, LPCTSTR name, BYTE & value, BYTE defval)
+/**
+ * Write or read one integer value, in specified section.
+ * @param [in] section Section for value.
+ * @param [in] name Name of value.
+ * @param [in,out] value Value to read/write.
+ * @param [in] defval Default value.
+ */
+void AppSerialize::SerializeByte(LPCTSTR section, LPCTSTR name, BYTE & value,
+	BYTE defval)
 {
 	if (m_direction == Save)
 		AfxGetApp()->WriteProfileInt(section, name, value);
@@ -73,16 +108,29 @@ AppSerialize::SerializeByte(LPCTSTR section, LPCTSTR name, BYTE & value, BYTE de
 		value = AfxGetApp()->GetProfileInt(section, name, 0);
 }
 
-/*** Write or read one string value (in fixed size TCHAR buffer), in current section */
-void
-AppSerialize::SerializeTcharArray(LPCTSTR name, LPTSTR value, int valsize, LPCTSTR defval)
+/**
+ * @brief Write or read one string value, in current section.
+ * @param [in] name Name of value.
+ * @param [in,out] value String to read/write.
+ * @param [in] valsize Length of the string.
+ * @param [in] defval Default value for string.
+ */
+void AppSerialize::SerializeTcharArray(LPCTSTR name, LPTSTR value, int valsize,
+	LPCTSTR defval)
 {
 	SerializeTcharArray(m_section, name, value, valsize, defval);
 }
 
-/*** Write or read one string value (in fixed size TCHAR buffer), in specified section */
-void
-AppSerialize::SerializeTcharArray(LPCTSTR section, LPCTSTR name, LPTSTR value, int valsize, LPCTSTR defval)
+/**
+ * @brief Write or read one string value, in specified section.
+ * @param [in] section Section for value.
+ * @param [in] name Name of value.
+ * @param [in,out] value String to read/write.
+ * @param [in] valsize Length of the string.
+ * @param [in] defval Default value for string.
+ */
+void AppSerialize::SerializeTcharArray(LPCTSTR section, LPCTSTR name,
+	LPTSTR value, int valsize, LPCTSTR defval)
 {
 	if (m_direction == Save)
 	{
@@ -98,17 +146,25 @@ AppSerialize::SerializeTcharArray(LPCTSTR section, LPCTSTR name, LPTSTR value, i
 	}
 }
 
-/*** Write or read one set of font setting (LOGFONT), in current section */
-void
-AppSerialize::SerializeFont(LPCTSTR name, LOGFONT & value)
+/**
+ * @brief Write or read one set of font setting, in current section.
+ * @param [in] name Name of the value.
+ * @param [in,out] value Font setting to read/write.
+ */
+void AppSerialize::SerializeFont(LPCTSTR name, LOGFONT & value)
 {
 	SerializeFont(m_section, name, value);
 }
 
 
-/*** Write or read one set of font setting (LOGFONT), in specified section */
-void
-AppSerialize::SerializeFont(LPCTSTR section, LPCTSTR name, LOGFONT & value)
+/**
+ * @brief Write or read one set of font setting, in specified section.
+ * @param [in] section Section for value.
+ * @param [in] name Name of the value.
+ * @param [in,out] value Font setting to read/write.
+ */
+void AppSerialize::SerializeFont(LPCTSTR section, LPCTSTR name,
+	LOGFONT & value)
 {
 	CString sName = name;
 	if (!sName.IsEmpty()) sName += _T(".");
@@ -126,6 +182,6 @@ AppSerialize::SerializeFont(LPCTSTR section, LPCTSTR name, LOGFONT & value)
 	SerializeByte(section, sName + _T("ClipPrecision"), value.lfClipPrecision);
 	SerializeByte(section, sName + _T("Quality"), value.lfQuality);
 	SerializeByte(section, sName + _T("PitchAndFamily"), value.lfPitchAndFamily);
-	SerializeTcharArray(section, sName + _T("FaceName"), value.lfFaceName, sizeof(value.lfFaceName)/sizeof(value.lfFaceName[0]));
+	SerializeTcharArray(section, sName + _T("FaceName"), value.lfFaceName,
+		sizeof(value.lfFaceName)/sizeof(value.lfFaceName[0]));
 }
-
